@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-07-16T00:58:40Z",
-  "count_outdated" : 216298,
-  "uniques_outdated" : 2148,
-  "count" : 218101,
-  "uniques" : 2164,
+  "timestamp" : "2024-07-17T00:58:12Z",
+  "count_outdated" : 216427,
+  "uniques_outdated" : 2149,
+  "count" : 218229,
+  "uniques" : 2165,
   "clones" : [
     {
-      "timestamp": "2024-07-02T00:00:00Z",
-      "count": 90,
-      "count_minmax": [ 90, 129 ],
-      "count_decinc": [ 39, 129 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-07-03T00:00:00Z",
-      "count": 130,
-      "count_minmax": [ 130, 130 ],
-      "count_decinc": [ 0, 130 ],
+      "count": 91,
+      "count_minmax": [ 91, 130 ],
+      "count_decinc": [ 39, 130 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -127,6 +118,15 @@
       "count": 129,
       "count_minmax": [ 129, 129 ],
       "count_decinc": [ 0, 129 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-07-16T00:00:00Z",
+      "count": 128,
+      "count_minmax": [ 128, 128 ],
+      "count_decinc": [ 0, 128 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
