@@ -1,15 +1,10 @@
 {
-  "count": 1764,
+  "count": 1763,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-07-02T00:00:00Z",
-      "count": 90,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-07-03T00:00:00Z",
-      "count": 130,
+      "count": 91,
       "uniques": 2
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2024-07-15T00:00:00Z",
       "count": 129,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-07-16T00:00:00Z",
+      "count": 128,
       "uniques": 1
     }
   ]
